Docker multi-stage builds are back! + yarn > npm
I brought back Docker multi-stage builds as an option since I like them so much. Kept the faster Dockerfiles as default for local development. Migrated to yarn over npm because of an install problem in the multi-stage build that yarn doesn't have.